# OJ-gen

./: README.md  generate_candidates.py  generate_prompts.py  oj_pipeline.ipynb  oj_pipeline_modified.ipynb  opik_eval_loop.py  pyproject.toml  requirements-opik.txt  requirements-train.txt  requirements.txt  train_unsloth_qwen3_8b.py
configs/: default.yaml  sft_qwen3_8b_a40.yaml  smoke.yaml
data/sft/: smoke_5.jsonl
data_old/: sft_from_csv_50.jsonl
oj_phasing/oj_preprocessed/: boj_problems_indexed.csv  problem_ids.txt
oj_preprocessed_llm/: fetch_solvedac_levels.py  preprocess_oj_fast.py  preprocess_oj_regex.py
oj_preprocessed_llm/oj_preprocessed/: README.md  stats.json
outputs/test-smoke/: README.md
outputs/test-smoke/checkpoint-5/: README.md  adapter_config.json  optimizer.pt  rng_state.pth  trainer_state.json
runs/smoke/: sft_smoke.jsonl
runs/smoke/parsed/: problems.csv  problems.jsonl  samples.csv  samples.jsonl
scripts/: generate_smoke.sh  prepare_dataset.sh  run_smoke_pipeline.sh  train_a40.sh  train_smoke.sh
src/ojgen/: __init__.py  build_sft_dataset.py  build_sft_from_csv.py  common.py  difficulty.py  distill_evaluated_to_sft.py  generate.py  generate_vllm.py  package_md.py  parse_zip.py  self_eval.py  train_sft.py  utils.py  validators.py
src/ojgen_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
unsloth_compiled_cache/: UnslothGRPOTrainer.py
