[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ojgen-pipeline"
version = "0.1.0"
description = "CSV-first training pipeline for BOJ-style problem generation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2.2",
  "tqdm>=4.66.4",
  "pyyaml>=6.0.1",
  "beautifulsoup4>=4.12.3",
  "lxml>=5.2.1",
  "rapidfuzz>=3.9.6",
  "scikit-learn>=1.5.0",
  "numpy>=1.26.4",
]

[project.optional-dependencies]
train = [
  "unsloth",
  "datasets",
  "transformers",
  "trl",
  "peft",
  "accelerate",
  "bitsandbytes",
  "sentencepiece",
  "protobuf",
  "safetensors",
]
opik = [
  "opik>=1.8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
